# ToYou-Backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle  dockerfile
.github/workflows/: build.yml  ci-cd.yml  delete-workflow-runs.yml  deploy.yml  docker-image.yml  release.yml  test.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240216_072943_create_user_table.rs  m20240216_072943_create_users_table.rs  m20240216_102222_create_image_table.rs  m20240216_114539_create_user_image_table.rs  m20240216_120257_create_folder_table.rs  m20240216_122843_create_share_table.rs  m20240302_055459_create_trade_table.rs
sql/: mysql.sql
src/: config.rs  main.rs
src/extractor/: auth.rs
src/main/java/cc/vastsea/toyou/: ToYouBackendJavaApplication.java
src/main/java/cc/vastsea/toyou/annotation/: AuthCheck.java
src/main/java/cc/vastsea/toyou/aop/: AuthInterceptor.java  LogInterceptor.java
src/main/java/cc/vastsea/toyou/common/: BaseResponse.java  DeleteRequest.java  ErrorCode.java  PageRequest.java  ResultUtils.java  StatusCode.java
src/main/java/cc/vastsea/toyou/config/: AsyncConfig.java  CorsConfig.java  MyBatisPlusConfig.java
src/main/java/cc/vastsea/toyou/constant/: CommonConstant.java  UserConstant.java
src/main/java/cc/vastsea/toyou/controler/: AdminController.java  PayController.java  PictureController.java  UserController.java
src/main/java/cc/vastsea/toyou/controller/: AdminController.java  PayController.java  PictureController.java  RealNameVerifyController.java  SmsController.java  UserController.java
src/main/java/cc/vastsea/toyou/exception/: BusinessException.java  GlobalExceptionHandler.java
src/main/java/cc/vastsea/toyou/mapper/: OrderMapper.java  PermissionMapper.java  PictureMapper.java  ProjectMapper.java  RealNameMapper.java  ShareMapper.java  UserMapper.java  UserPictureMapper.java
src/main/java/cc/vastsea/toyou/model/dto/: CodeGetResponse.java  EmailCodeGetResponse.java  OrderCreationRequest.java  PictureMetaGetResponse.java  PicturePreviewRequest.java  (+7 more)
src/main/java/cc/vastsea/toyou/service/: AliyunSmsService.java  MailService.java  OrderService.java  PayService.java  PermissionService.java  PictureService.java  RealNameVerifyService.java  ShareService.java  UserPictureService.java  UserService.java
src/main/java/cc/vastsea/toyou/task/: CleanupEndTask.java
src/main/java/cc/vastsea/toyou/util/: CaffeineFactory.java  ListUtil.java  NetUtil.java  NetUtils.java  NumberUtil.java  PasswordUtil.java  StringUtil.java  TypeUtil.java
src/main/resources/: application.properties  application.yml  application.yml   banner.txt
src/main/resources/mapper/: OrderMapper.xml  PermissionMapper.xml  PictureMapper.xml  ShareMapper.xml  UserMapper.xml  UserPictureMapper.xml
src/main/resources/templates/: EmailCode.html
src/model/: folder.rs  image.rs  mod.rs  prelude.rs  share.rs  trade.rs  user.rs  user_image.rs
src/service/: error.rs  mod.rs
src/service/folder/: create.rs  get.rs  mod.rs  rename.rs
src/service/picture/: compress.rs  delete.rs  file.rs  get.rs  mod.rs  rename.rs  upload.rs
src/service/share/: content.rs  create.rs  get.rs  mod.rs
src/service/trade/: id.rs  mod.rs
src/service/trade/wechat/: mod.rs  recall.rs  start.rs
src/service/user/: level.rs  login.rs  mod.rs  phone.rs  register.rs
src/test/java/cc/vastsea/toyou/: ToYouBackendJavaApplicationTests.java
src/test/java/cc/vastsea/toyou/pay/: PaymentTest.java
(+36 files in other folders)
