[package]
name = "just-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"

axum = "0.7.4"
tower-http = { version = "0.5.0", features = ["catch-panic", "trace"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }

tokio = { version = "1.36.0", features = ["full"] }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-inline-default = "0.2.0"
toml = "0.8.10"

blake3 = "1.5.0"
base64 = "0.21.7"
base16384 = "0.1.0"

sea-orm = { version = "0.12", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
migration = { path = "migration" }
chrono = "0.4.34"
