[package]
name = "just-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
#tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"

#server
axum = { version = "0.7.4", features = ["multipart"] }
tower-http = { version = "0.5.0", features = ["catch-panic", "trace"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }

#tools
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.34"
moka = { version = "0.12.5", features = ["future"] }
lazy_static = "1.4.0"

#serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-inline-default = "0.2.0"
toml = "0.8.10"

#encrypt algorithms
blake3 = "1.5.0"
base64 = "0.21.7"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
rand = "0.8.5"

#database
sea-orm = { version = "0.12", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
migration = { path = "migration" }
lazy-regex = "3.1.0"

